<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Homework312</string>
    <string name="action_shake">Shake</string>
    <string name="iconddesc">Icon</string>
    <string name="title">Title</string>
    <string name="article_text_goes_here">Article Text goes here</string>
    <string name="placeholderdate">PlaceholderDate</string>
    <string name="title_placeholder">Title placeholder</string>
    <string name="background_image">background image</string>
    <string name="std_date_format">yyyy-MM-dd HH:mm:ss zzz</string>
    <string name="DetailView_Date_format">MMM dd hh:mm a zzz</string>
    <string name="ListView_Date_format">MMM dd hh:mm a zzz</string>
    <string name="raw_xml_provider">Raw XML</string>
    <string name="refreshing_content">refreshing content&#8230;</string>
    <string name="icondesc">icondesc</string>
    <string name="dateplaceholder">date</string>
    <string name="unknown">unknown</string>

</resources>
